fix responsive on mobile

--- a/src/assets/styles/components/_footer.scss
+++ b/src/assets/styles/components/_footer.scss
@@ -1,4 +1,8 @@
 .footer {
+    @include mq-down(sm) {
+        border: none;
+    }
+
     &--content {
         padding: 144px 44px 144px 44px;
 
